<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@mipmap/login_bg" >
	<LinearLayout
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:orientation="vertical"
		>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="5"
			android:focusable="true"
			android:focusableInTouchMode="true"
			android:gravity="center"
			android:orientation="vertical">

			<ImageView
				android:id="@+id/iv_icon"
				android:layout_width="84dp"
				android:layout_height="73dp"
				android:layout_marginBottom="20dp"
				android:src="@mipmap/login_logo2" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="10dp"

				android:orientation="vertical">

				<EditText
					android:id="@+id/code"
					android:layout_width="fill_parent"
					android:layout_height="@dimen/base_action_bar_height"
					android:background="@mipmap/input_bg"
					android:drawableLeft="@mipmap/ic_security_black_36dp"
					android:drawablePadding="5dp"
					android:hint="@string/login_code_hint"
					android:paddingLeft="5dp"
					android:shadowDx="0.0"
					android:shadowDy="1.0"
					android:shadowRadius="1.0"
					android:textColorHint="#ffdddddd" />

				<View
					android:layout_width="match_parent"
					android:layout_height="0.5dp"
					android:background="@mipmap/base_horization_line" />

				<EditText
					android:id="@+id/username"
					android:layout_width="fill_parent"
					android:layout_height="@dimen/base_action_bar_height"
					android:background="@mipmap/input_bg"
					android:drawableLeft="@mipmap/ic_phone_android_black_36dp"
					android:drawablePadding="5dp"
					android:hint="@string/login_username_hint"
					android:paddingLeft="5dp"
					android:shadowDx="0.0"
					android:shadowDy="1.0"
					android:shadowRadius="1.0"
					android:textColorHint="#ffdddddd" />

				<View
					android:layout_width="match_parent"
					android:layout_height="0.5dp"
					android:background="@mipmap/base_horization_line" />

				<EditText
					android:id="@+id/password"
					android:layout_width="fill_parent"
					android:layout_height="@dimen/base_action_bar_height"
					android:background="@mipmap/input_bg"
					android:drawableLeft="@mipmap/ic_enhanced_encryption_black_36dp"
					android:drawablePadding="5dp"
					android:hint="@string/login_password_hint"
					android:inputType="textPassword"
					android:paddingLeft="5dp"
					android:textColorHint="#ffdddddd" />
			</LinearLayout>

			<Button
				android:id="@+id/btn_login"
				android:layout_width="match_parent"
				android:layout_height="@dimen/base_action_bar_height"
				android:layout_margin="@dimen/activity_vertical_margin"
				android:background="#2A93fD"
				android:gravity="center"
				android:text="@string/login"
				android:textColor="@color/base_color_text_white"
				android:textSize="@dimen/text_size_large" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="fill_parent"
			android:layout_weight="9" />
	</LinearLayout>
</RelativeLayout>