<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:minHeight="40dp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:background="@color/base_bg"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:gravity="left|center"
                android:textSize="16dp"
                android:text="@string/title_today_index"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:minHeight="40dp"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingLeft="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_data_title_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/data_index_title"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:text=""/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="16dp"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:text="@string/title_count"/>
                    <TextView
                        android:id="@+id/tv_all_size"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/tip_wait"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:textColor="@android:color/holo_green_dark"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="16dp"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:text="@string/title_price"/>
                    <TextView
                        android:id="@+id/tv_all_price"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:text="@string/tip_wait"
                        android:textColor="@android:color/holo_orange_dark"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:minHeight="40dp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:background="@color/base_bg"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:gravity="left|center"
                android:textSize="16dp"
                android:text="@string/title_today_data"
                />
            <TextView
                android:id="@+id/all_data_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:gravity="right|center"
                android:textSize="16dp"

                android:text="@string/title_all_data"
                />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:orientation="vertical">
        <ListView
            app:layout_scrollFlags="scroll|enterAlways"
            android:id="@+id/listView_data"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:divider="#e3e3e3"

            android:dividerHeight="1px"
            ></ListView>
    </LinearLayout>

</LinearLayout>