<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:minHeight="40dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">
            <TextView
                android:id="@+id/item_tv_data_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="20dp"
                android:text="@string/title_lobar_data"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_date"
                android:gravity="top|center_horizontal"
                android:textColor="#717070"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="2018-01-12 11:11:11"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:minHeight="40dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/item_tv_data_title_key_1"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent"
                android:textColor="#000000"
                android:text="@string/title_foreman_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/item_tv_data_title_value_1"
                android:layout_width="match_parent"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_height="match_parent"
                android:text="2018-01-12 11:11:11"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:minHeight="40dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/item_tv_data_title_key_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="#000000"
                android:text="@string/title_work_num"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView

                android:id="@+id/item_tv_data_title_value_2"
                android:layout_width="match_parent"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_height="match_parent"
                android:text="21"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:minHeight="40dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/item_tv_data_title_key_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="#000000"
                android:text="@string/title_price"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/item_tv_data_title_value_3"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="2018-01-12"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
